--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>HabitTracker.Application</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
